Created placeholder values & changed display names, for ALL processes

--- a/EyeHistoria/Views/Process/ChiefComplaintProcess.cshtml
+++ b/EyeHistoria/Views/Process/ChiefComplaintProcess.cshtml
@@ -8,7 +8,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="p_chiefcomplaint" class="control-label"></label>
-                <input asp-for="p_chiefcomplaint" class="form-control" />
+                <input asp-for="p_chiefcomplaint" class="form-control" placeholder="Experiencing eye redness, pain, and irritation for the past two days"/>
                 <span asp-validation-for="p_chiefcomplaint" class="text-danger"></span>
             </div>
             <div class="form-group">
