--- a/EyeHistoria/Views/Process/FamilyOcularHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/FamilyOcularHistoryProcess.cshtml
@@ -17,12 +17,12 @@
             </div>
             <div class="form-group" id="dis_type">
                 <label asp-for="dis_type" class="control-label"></label>
-                <input asp-for="dis_type" class="form-control" />
+                <input asp-for="dis_type" class="form-control" placeholder="Cataracts"/>
                 <span asp-validation-for="dis_type" class="text-danger"></span>
             </div>
             <div class="form-group" id="dis_member">
                 <label asp-for="dis_member" class="control-label"></label>
-                <input asp-for="dis_member" class="form-control" />
+                <input asp-for="dis_member" class="form-control" placeholder="Mother" />
                 <span asp-validation-for="dis_member" class="text-danger"></span>
             </div>
 
