--- a/EyeHistoria/Views/Process/FamilyHealthHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/FamilyHealthHistoryProcess.cshtml
@@ -17,12 +17,12 @@
             </div>
             <div class="form-group" id="hdis_type">
                 <label asp-for="hdis_type" class="control-label"></label>
-                <input asp-for="hdis_type" class="form-control" />
+                <input asp-for="hdis_type" class="form-control" placeholder="Diabetes" />
                 <span asp-validation-for="hdis_type" class="text-danger"></span>
             </div>
             <div class="form-group" id="hdis_member">
                 <label asp-for="hdis_member" class="control-label"></label>
-                <input asp-for="hdis_member" class="form-control" />
+                <input asp-for="hdis_member" class="form-control" placeholder="Mother"/>
                 <span asp-validation-for="hdis_member" class="text-danger"></span>
             </div>
 
