--- a/EyeHistoria/Views/Process/HabitsProcess.cshtml
+++ b/EyeHistoria/Views/Process/HabitsProcess.cshtml
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group" id="s_freq">
                 <label asp-for="s_freq" class="control-label"></label>
-                <input asp-for="s_freq" class="form-control" />
+                <input asp-for="s_freq" class="form-control" placeholder="1">
                 <span asp-validation-for="s_freq" class="text-danger"></span>
             </div>
 
@@ -31,7 +31,7 @@
             </div>
             <div class="form-group" id="d_freq">
                 <label asp-for="d_freq" class="control-label"></label>
-                <input asp-for="d_freq" class="form-control" />
+                <input asp-for="d_freq" class="form-control" placeholder="2"/>
                 <span asp-validation-for="d_freq" class="text-danger"></span>
             </div>
 
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group" id="g_freq">
                 <label asp-for="g_freq" class="control-label"></label>
-                <input asp-for="g_freq" class="form-control" />
+                <input asp-for="g_freq" class="form-control" placeholder="2"/>
                 <span asp-validation-for="g_freq" class="text-danger"></span>
             </div>
 
@@ -60,7 +60,7 @@
             </div>
             <div class="form-group" id="r_freq">
                 <label asp-for="r_freq" class="control-label"></label>
-                <input asp-for="r_freq" class="form-control" />
+                <input asp-for="r_freq" class="form-control" placeholder="4"/>
                 <span asp-validation-for="r_freq" class="text-danger"></span>
             </div>
 
