--- a/EyeHistoria/Views/Process/Index.cshtml
+++ b/EyeHistoria/Views/Process/Index.cshtml
@@ -8,27 +8,30 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="p_name" class="control-label"></label>
-                <input asp-for="p_name" class="form-control" />
+                <input asp-for="p_name" class="form-control" placeholder = "John Doe"/>
                 <span asp-validation-for="p_name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="p_race" class="control-label"></label>
-                <input asp-for="p_race" class="form-control" />
+                <input asp-for="p_race" class="form-control" placeholder = "Chinese"/>
                 <span asp-validation-for="p_race" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="p_age" class="control-label"></label>
-                <input asp-for="p_age" class="form-control" />
+                <input asp-for="p_age" class="form-control" placeholder = "18"/>
                 <span asp-validation-for="p_age" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="p_occupation" class="control-label"></label>
-                <input asp-for="p_occupation" class="form-control" />
+                <input asp-for="p_occupation" class="form-control" placeholder= "Software Engineer"/>
                 <span asp-validation-for="p_occupation" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="p_gender" class="control-label"></label>
-                <input asp-for="p_gender" class="form-control" />
+                <select asp-for="p_gender" class="form-control">
+                    <option value="M">Male</option>
+                    <option value="F">Female</option>
+                </select>
                 <span asp-validation-for="p_gender" class="text-danger"></span>
             </div>
             <div class="form-group">
