--- a/EyeHistoria/Views/Process/PersonalHealthHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/PersonalHealthHistoryProcess.cshtml
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group" id="all_type">
                 <label asp-for="all_type" class="control-label"></label>
-                <input asp-for="all_type" class="form-control" />
+                <input asp-for="all_type" class="form-control" placeholder="Dust"/>
                 <span asp-validation-for="all_type" class="text-danger"></span>
             </div>
 
@@ -31,7 +31,7 @@
             </div>
             <div class="form-group" id="med_type">
                 <label asp-for="med_type" class="control-label"></label>
-                <input asp-for="med_type" class="form-control" />
+                <input asp-for="med_type" class="form-control" placeholder="Isotretinoin"/>
                 <span asp-validation-for="med_type" class="text-danger"></span>
             </div>
             <div class="form-group" id="med_sdate">
@@ -55,7 +55,7 @@
             </div>
             <div class="form-group" id="hcon_type">
                 <label asp-for="hcon_type" class="control-label"></label>
-                <input asp-for="hcon_type" class="form-control" />
+                <input asp-for="hcon_type" class="form-control" placeholder="Diabetes"/>
                 <span asp-validation-for="hcon_type" class="text-danger"></span>
             </div>
             <div class="form-group" id="hcon_sdate">
