--- a/EyeHistoria/Views/Process/FamilyHealthHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/FamilyHealthHistoryProcess.cshtml
@@ -1,6 +1,11 @@
 ﻿@model EyeHistoria.Models.FamilyHealthHistory
 
-<h4>FamilyHealthHistory</h4>
+@{
+    Layout = "_ProcessLayout";
+}
+
+<h4>4. Family Health History</h4>
+<h5>Please find out more about the patient's family, specifically their health history.</h5>
 <hr />
 <div class="row">
     <div class="col-md-4">
