--- a/EyeHistoria/Views/Process/FamilyOcularHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/FamilyOcularHistoryProcess.cshtml
@@ -1,6 +1,11 @@
 ﻿@model EyeHistoria.Models.FamilyOcularHistory
 
-<h4>FamilyOcularHistory</h4>
+@{
+    Layout = "_ProcessLayout";
+}
+
+<h4>3. Family Ocular History</h4>
+<h5>Please find out more about the patient's family - specifically their ocular history.</h5>
 <hr />
 <div class="row">
     <div class="col-md-4">
