--- a/EyeHistoria/Views/Process/HabitsProcess.cshtml
+++ b/EyeHistoria/Views/Process/HabitsProcess.cshtml
@@ -1,6 +1,11 @@
 ﻿@model EyeHistoria.Models.Habits
 
-<h4>Habits</h4>
+@{
+    Layout = "_ProcessLayout";
+}
+
+<h4>5. Habits</h4>
+<h5>Please learn more about the patient's lifestyle, habits.</h5>
 <hr />
 <div class="row">
     <div class="col-md-4">
