--- a/EyeHistoria/Views/Process/OcularHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/OcularHistoryProcess.cshtml
@@ -1,5 +1,9 @@
 ﻿@model EyeHistoria.Models.OcularHistoryViewModel
 
+@{
+    Layout = "_ProcessLayout";
+}
+
 <h4>OcularHistoryViewModel</h4>
 <hr />
 <div class="row">
