--- a/EyeHistoria/Views/Process/PersonalHealthHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/PersonalHealthHistoryProcess.cshtml
@@ -1,6 +1,11 @@
 ﻿@model EyeHistoria.Models.PersonalHealthHistory
 
-<h4>PersonalHealthHistory</h4>
+@{
+    Layout = "_ProcessLayout";
+}
+
+<h4>4. Personal Health History</h4>
+<h5>Please find out more about the patient's health history.</h5>
 <hr />
 <div class="row">
     <div class="col-md-4">
