--- a/EyeHistoria/Views/Process/PersonalOcularHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/PersonalOcularHistoryProcess.cshtml
@@ -1,6 +1,11 @@
 ﻿@model EyeHistoria.Models.PersonalOcularHistory
 
-<h4>PersonalOcularHistory</h4>
+@{
+    Layout = "_ProcessLayout";
+}
+
+<h4>3. Personal Ocular History</h4>
+<h5>Please find out more about the patient's ocular history.</h5>
 <hr />
 <div class="row">
     <div class="col-md-4">
