--- a/EyeHistoria/Views/Shared/_Layout.cshtml
+++ b/EyeHistoria/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Process" asp-action="Index">Process</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Process" asp-action="ChatBot">ChatBot</a>
+                    </li>
 
                 </ul>
             </nav>
