--- a/EyeHistoria/Views/Process/ChiefComplaintProcess.cshtml
+++ b/EyeHistoria/Views/Process/ChiefComplaintProcess.cshtml
@@ -43,7 +43,7 @@
     select {
         font-family: 'Montserrat', sans-serif;
         width: 100%;
-        max-width: 300px; /* Limit input box width */
+        max-width: 500px; /* Limit input box width */
         padding: 10px;
         box-sizing: border-box;
         border: 1px solid #ced4da;
@@ -59,10 +59,15 @@
         border: none;
         border-radius: 16px;
         cursor: pointer;
+        transition: background-color 0.8s, color 0.8s, box-shadow 0.8s, transform 0.8s; /* Add box-shadow to the transition */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Initial box shadow */
     }
 
         input[type="submit"]:hover {
-            background-color: #0056b3;
+            background-color: #28a745; /* Change background color on hover to green */
+            color: #fff; /* Change text color on hover to white */
+            transform: translateY(-3px); /* Offset the button slightly on hover */
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Adjust box shadow on hover */
         }
 
     .next-link {
@@ -86,24 +91,23 @@
 
 <h4>2. Chief Complaint</h4>
 <h5>Please find out why the patient has visited the optometrist today.</h5>
-<hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="ChiefComplaintProcess">
+        <form asp-action="ChiefComplaintProcess" class="form-container">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="p_chiefcomplaint" class="control-label"></label>
                 <input asp-for="p_chiefcomplaint" class="form-control" placeholder="Experiencing eye redness, pain, and irritation for the past two days"/>
                 <span asp-validation-for="p_chiefcomplaint" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group next-button-container">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
+<div class="next-link">
     <a asp-action="PersonalOcularHistoryProcess">Next</a>
 </div>
 
